hiding the summary button until i actually implement it

--- a/quran.html
+++ b/quran.html
@@ -19,7 +19,7 @@
                     document.getElementById('contentSpot').innerHTML = selectionToHTML(CurrentSelection)
                 "
         />
-        <input
+        <!--input
         id    = "summary-button"
         type  = "button"
         value = "get summary"
@@ -27,7 +27,7 @@
             "
                 console.log(selectionToHTMLSummary(CurrentSelection))
             "
-        />
+        /-->
         <div id="summary"></div>
         <div id="contentSpot"></div>
     </body>
