restore arabic text from previous ascii copy error

--- a/quran.html
+++ b/quran.html
@@ -3,7 +3,7 @@
     <body>
         <h1>Quran</h1>
         <span id="filler-text">
-            <b>Ù†Øµ Ø­Ø´Ùˆ Ø¹Ø±Ø¨ÙŠ</b> <!-- 'arabic filler text' -->
+            <b>نص حشو عربي</b> <!-- 'arabic filler text' -->
         </span>
         <input
             id   = "inputText"
